@@ -2,7 +2,7 @@
                           rkstandardactions  -  description
                              -------------------
     begin                : Sun Nov 18 2007
-    copyright            : (C) 2007, 2009, 2010 by Thomas Friedrichsmeier
+    copyright            : (C) 2007, 2009, 2010, 2011 by Thomas Friedrichsmeier
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -27,6 +27,7 @@ class RKMDIWindow;
 
 @author Thomas Friedrichsmeier */
 namespace RKStandardActions {
+	KAction *copyLinesToOutput (RKMDIWindow *window, const QObject *receiver=0, const char *member=0);
 /** Allows special pasting modes for script windows.
 @param member needs to have the signature void fun (const QString&). */
 	KAction* pasteSpecial (RKMDIWindow *window, const QObject *receiver=0, const char *member=0);
